Fix #2 Set z-index for navbar collapse dropdown. This is necessary, layering the navbar above the map element rather than the map covering the navbar when expanded.

--- a/css/default.css
+++ b/css/default.css
@@ -30,6 +30,10 @@ ul {
 
 /* //////////// Navbar Styles //////////// */
 
+#nav-menu {
+  z-index: 5;
+}
+
 #nav-logo {
   max-height: 40px;
   float: left;
